add first bonus

--- a/src/app/weather/weather/pages/search/search.page.html
+++ b/src/app/weather/weather/pages/search/search.page.html
@@ -24,3 +24,9 @@
   </div>
   }
 }
+
+@if(!isLoading && weatherStatus === 'success') {
+  <weather-outfit-widget
+    [currentWeather]="currentWeatherSignal()"
+  ></weather-outfit-widget>
+}
